--- a/src/sirchmunk_mcp/config/env.example
+++ b/src/sirchmunk_mcp/config/env.example
@@ -3,10 +3,10 @@
 LLM_BASE_URL=https://api.openai.com/v1
 
 # LLM API key (REQUIRED)
-LLM_API_KEY=sk-your-api-key-here
+LLM_API_KEY=your-api-key
 
 # LLM model name
-LLM_MODEL_NAME=gpt-4-turbo-preview
+LLM_MODEL_NAME=gpt-5.2
 
 # LLM request timeout in seconds
 LLM_TIMEOUT=60.0
@@ -54,14 +54,14 @@ MCP_SERVER_VERSION=0.1.0
 # Logging level (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 MCP_LOG_LEVEL=INFO
 
-# MCP transport protocol (stdio or sse)
+# MCP transport protocol (stdio or http)
 MCP_TRANSPORT=stdio
 
-# ===== SSE Transport Settings (only used when MCP_TRANSPORT=sse) =====
-# Host for SSE transport
+# ===== HTTP Transport Settings (only used when MCP_TRANSPORT=http) =====
+# Host for HTTP transport
 MCP_HOST=localhost
 
-# Port for SSE transport
+# Port for HTTP transport
 MCP_PORT=8080
 
 # ===== Optional: Custom Embedding Model Settings =====
