--- a/config/env.example
+++ b/config/env.example
@@ -3,10 +3,10 @@
 LLM_BASE_URL=https://api.openai.com/v1
 
 # LLM API key (REQUIRED)
-LLM_API_KEY=sk-your-api-key-here
+LLM_API_KEY=your-api-key
 
 # LLM model name
-LLM_MODEL_NAME=gpt-4-turbo-preview
+LLM_MODEL_NAME=gpt-5.2
 
 # LLM request timeout in seconds
 LLM_TIMEOUT=60.0
