--- a/.gitignore
+++ b/.gitignore
@@ -143,7 +143,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-src/sirchmunk_mcp/.env
+src/sirchmunk_mcp/.mcp_env
 
 # Spyder project settings
 .spyderproject
