--- a/config/env.example
+++ b/config/env.example
@@ -1,9 +1,13 @@
-# ===== LLM Configuration =====
+# ===== Sirchmunk Configuration =====
+# Shared by Web API server and MCP server.
+# Copy to ~/.sirchmunk/.env and edit.
+
+# ===== LLM Settings =====
 # LLM API base URL (OpenAI-compatible endpoint)
 LLM_BASE_URL=https://api.openai.com/v1
 
-# LLM API key (REQUIRED)
-LLM_API_KEY=your-api-key
+# LLM API key (REQUIRED - get from your LLM provider)
+LLM_API_KEY=
 
 # LLM model name
 LLM_MODEL_NAME=gpt-5.2
@@ -18,19 +22,6 @@ SIRCHMUNK_WORK_PATH=~/.sirchmunk
 # Enable verbose logging (true/false)
 SIRCHMUNK_VERBOSE=false
 
-# Enable knowledge cluster reuse with embeddings (true/false)
-SIRCHMUNK_ENABLE_CLUSTER_REUSE=true
-
-# ===== Cluster Similarity Settings =====
-# Similarity threshold for cluster reuse (0.0-1.0)
-CLUSTER_SIM_THRESHOLD=0.85
-
-# Number of similar clusters to retrieve (1-10)
-CLUSTER_SIM_TOP_K=3
-
-# Maximum number of queries to keep per cluster (FIFO strategy)
-MAX_QUERIES_PER_CLUSTER=5
-
 # ===== Search Default Settings =====
 # Maximum directory depth to search
 DEFAULT_MAX_DEPTH=5
@@ -44,24 +35,34 @@ DEFAULT_KEYWORD_LEVELS=3
 # Timeout for grep operations in seconds
 GREP_TIMEOUT=60.0
 
+# ===== Cluster Settings =====
+# Enable knowledge cluster reuse with embeddings (true/false)
+SIRCHMUNK_ENABLE_CLUSTER_REUSE=true
+
+# Similarity threshold for cluster reuse (0.0-1.0)
+CLUSTER_SIM_THRESHOLD=0.85
+
+# Number of similar clusters to retrieve (1-10)
+CLUSTER_SIM_TOP_K=3
+
+# Maximum number of queries to keep per cluster (FIFO strategy)
+MAX_QUERIES_PER_CLUSTER=5
+
 # ===== MCP Server Settings =====
 # MCP server name
 MCP_SERVER_NAME=sirchmunk
 
-# MCP server version
-MCP_SERVER_VERSION=0.1.0
-
 # Logging level (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 MCP_LOG_LEVEL=INFO
 
-# MCP transport protocol (stdio or sse)
+# MCP transport protocol (stdio or http)
 MCP_TRANSPORT=stdio
 
-# ===== SSE Transport Settings (only used when MCP_TRANSPORT=sse) =====
-# Host for SSE transport
+# ===== HTTP Transport Settings (only used when MCP_TRANSPORT=http) =====
+# Host for HTTP transport
 MCP_HOST=localhost
 
-# Port for SSE transport
+# Port for HTTP transport
 MCP_PORT=8080
 
 # ===== Optional: Custom Embedding Model Settings =====
