unified settings with env storage

--- a/config/env.example
+++ b/config/env.example
@@ -15,6 +15,13 @@ LLM_MODEL_NAME=gpt-5.2
 # LLM request timeout in seconds
 LLM_TIMEOUT=60.0
 
+# ===== UI Settings =====
+# WebUI theme (light/dark)
+UI_THEME=light
+
+# WebUI language (en/zh)
+UI_LANGUAGE=en
+
 # ===== Sirchmunk Settings =====
 # Working directory for Sirchmunk data and cache
 SIRCHMUNK_WORK_PATH=~/.sirchmunk
