add docker module

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,7 +14,7 @@
 
 services:
   sirchmunk:
-    image: sirchmunk:ubuntu-py3.12-latest-cpu
+    image: sirchmunk:ubuntu22.04-py312-latest
     build:
       context: ..
       dockerfile: Dockerfile
