add requirements for docker building

--- a/docker/Dockerfile.ubuntu
+++ b/docker/Dockerfile.ubuntu
@@ -27,7 +27,7 @@ FROM {python_image} AS runtime
 ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=UTC
 
-# System dependencies + document processing adapters for rga
+# System dependencies + rga adapters (see https://github.com/phiresky/ripgrep-all) + debug tools
 RUN apt-get update && apt-get install -y --no-install-recommends \
         build-essential \
         curl \
@@ -35,7 +35,16 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         poppler-utils \
         pandoc \
         tesseract-ocr \
-    && rm -rf /var/lib/apt/lists/*
+        ffmpeg \
+        vim \
+        less \
+        procps \
+        net-tools \
+        htop \
+    && rm -rf /var/lib/apt/lists/* \
+    && echo 'alias ll="ls -alF"' >> /etc/bash.bashrc \
+    && echo 'alias la="ls -A"' >> /etc/bash.bashrc \
+    && echo 'alias l="ls -CF"' >> /etc/bash.bashrc
 
 # Install ripgrep
 RUN curl -fsSL {github_proxy}https://github.com/BurntSushi/ripgrep/releases/download/{rg_version}/ripgrep_{rg_version}-1_amd64.deb \
